envio de datos al servidor

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,16 @@ sketch
 .history
 .ionide
 
+
+# Python
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # End of https://www.toptal.com/developers/gitignore/api/react,visualstudiocode
